// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VAT Calculations it creates a correct vat summary 1`] = `
Immutable.Record {
  "totalVat": 494.3,
}
`;

exports[`VAT Calculations it creates a correct vat summary 2`] = `
Immutable.Record {
  "totalVat": 177,
}
`;

exports[`VAT Calculations it works with EZV examples 1`] = `
Immutable.Record {
  "totalVat": 27.2,
}
`;

exports[`VAT Calculations it works with EZV examples 2`] = `
Immutable.Record {
  "totalVat": 36.25,
}
`;

exports[`VAT Calculations it works with EZV examples 3`] = `
Immutable.Record {
  "totalVat": 31.25,
}
`;

exports[`VAT Calculations it works with EZV examples 4`] = `
Immutable.Record {
  "totalVat": 58.5,
}
`;

exports[`VAT Calculations it works with EZV examples 5`] = `
Immutable.Record {
  "totalVat": 36.25,
}
`;

exports[`VAT Calculations it works with EZV examples 6`] = `
Immutable.Record {
  "totalVat": 28.95,
}
`;

exports[`VAT Calculations it works with EZV examples 7`] = `
Immutable.Record {
  "totalVat": 0,
}
`;

exports[`VAT Calculations it works with EZV examples 8`] = `
Immutable.Record {
  "totalVat": 36.75,
}
`;

exports[`VAT Calculations it works with EZV examples 9`] = `
Immutable.Record {
  "totalVat": 67.55,
}
`;

exports[`VAT Calculations it works with EZV examples 10`] = `
Immutable.Record {
  "totalVat": 72.55,
}
`;

exports[`VAT Calculations it works with EZV examples 11`] = `
Immutable.Record {
  "totalVat": 44.45,
}
`;

exports[`VAT Calculations it works with EZV examples 12`] = `
Immutable.Record {
  "totalVat": 45.3,
}
`;

exports[`VAT Calculations it works with EZV examples 13`] = `
Immutable.Record {
  "totalVat": 89.75,
}
`;
